--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
         android:theme="@style/Theme.StudentsApp"
         tools:targetApi="31">
         <activity
+            android:name=".NewStudentActivity"
+            android:exported="false"
+            android:label="@string/title_activity_new_student"
+            android:theme="@style/Theme.StudentsApp" />
+        <activity
+            android:name=".StudentsListActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
