--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,22 @@
         android:theme="@style/Theme.StudentsApp"
         tools:targetApi="31">
         <activity
-            android:name=".NewStudentActivity"
+            android:name=".activities.EditStudentActivity"
+            android:exported="false"
+            android:label="@string/title_activity_edit_student"
+            android:theme="@style/Theme.StudentsApp" />
+        <activity
+            android:name=".activities.StudentDetailsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_student_details"
+            android:theme="@style/Theme.StudentsApp" />
+        <activity
+            android:name=".activities.NewStudentActivity"
             android:exported="false"
             android:label="@string/title_activity_new_student"
             android:theme="@style/Theme.StudentsApp" />
         <activity
-            android:name=".StudentsListActivity"
+            android:name=".activities.StudentsListActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
