--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,46 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.studentsapp">
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.StudentsApp"
-        tools:targetApi="31">
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+
+        <!-- Main Activity -->
         <activity
-            android:name=".activities.EditStudentActivity"
-            android:exported="false"
-            android:label="@string/title_activity_edit_student"
-            android:theme="@style/Theme.StudentsApp" />
-        <activity
-            android:name=".activities.StudentDetailsActivity"
-            android:exported="false"
-            android:label="@string/title_activity_student_details"
-            android:theme="@style/Theme.StudentsApp" />
-        <activity
-            android:name=".activities.NewStudentActivity"
-            android:exported="false"
-            android:label="@string/title_activity_new_student"
-            android:theme="@style/Theme.StudentsApp" />
-        <activity
-            android:name=".activities.StudentsListActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.StudentsApp">
+            android:name=".activities.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <!-- Other Activities -->
+        <activity
+            android:name=".activities.NewStudentActivity"
+            android:label="Add New Student"
+            android:parentActivityName=".activities.MainActivity" />
+
+        <activity
+            android:name=".activities.StudentDetailsActivity"
+            android:label="Student Details"
+            android:parentActivityName=".activities.MainActivity" />
+
+        <activity
+            android:name=".activities.EditStudentActivity"
+            android:label="Edit Student"
+            android:parentActivityName=".activities.StudentDetailsActivity" />
+
+    </application>
 </manifest>
